[gd_scene load_steps=7 format=3 uid="uid://cj1wfbykg7nbg"]

[ext_resource type="PackedScene" uid="uid://d03a1olx2ffqe" path="res://scenes/player.tscn" id="1_gpa26"]
[ext_resource type="Script" path="res://scenes/scripts/player_hud.gd" id="1_quuu1"]
[ext_resource type="PackedScene" uid="uid://bcubjan6ka22e" path="res://scenes/hud.tscn" id="3_2q23f"]
[ext_resource type="Texture2D" uid="uid://difi524jggj23" path="res://light.png" id="4_31aly"]

[sub_resource type="SystemFont" id="SystemFont_3thag"]
font_names = PackedStringArray("PingFang HK")
subpixel_positioning = 0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4yqw1"]
polygon = PackedVector2Array(72, 63, 75, 695, 1196, 687, 1196, 57)

[node name="PlayerHud" type="CanvasGroup"]
script = ExtResource("1_quuu1")

[node name="HUD" parent="." instance=ExtResource("3_2q23f")]
position = Vector2(-8, 0)

[node name="Player" parent="." instance=ExtResource("1_gpa26")]
position = Vector2(156, 539)

[node name="ComboTimer" type="Timer" parent="."]
wait_time = 76.952
one_shot = true

[node name="ComboDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="ComboLabel" type="Label" parent="."]
visible = false
offset_left = -58.0
offset_top = -49.0
offset_right = 1243.0
offset_bottom = 737.0
theme_override_colors/font_color = Color(0.934368, 0.777882, 0.915159, 1)
theme_override_fonts/font = SubResource("SystemFont_3thag")
theme_override_font_sizes/font_size = 250
text = "COMBO 3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="PointLight2D" type="PointLight2D" parent="ComboLabel"]
position = Vector2(635, 363)
scale = Vector2(0.124596, 1.09947)
texture = ExtResource("4_31aly")
texture_scale = 1.16

[node name="LightOccluder2D" type="LightOccluder2D" parent="ComboLabel"]
position = Vector2(-15, 0)
occluder = SubResource("OccluderPolygon2D_4yqw1")

[node name="HoverProgressBG" type="ColorRect" parent="." groups=["ui_element"]]
offset_left = 719.0
offset_top = 589.0
offset_right = 1119.0
offset_bottom = 629.0
color = Color(0.537255, 0, 0, 1)

[node name="HoverProgress" type="ColorRect" parent="." groups=["ui_element"]]
offset_left = 719.0
offset_top = 589.0
offset_right = 1119.0
offset_bottom = 628.0
color = Color(1, 0.054902, 1, 1)

[connection signal="coin" from="Player" to="." method="_on_player_coin"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="hover" from="Player" to="." method="_on_player_hover"]
[connection signal="hover_recharge" from="Player" to="." method="_on_player_hover_recharge"]
[connection signal="show_hover_stall_timer" from="Player" to="." method="_on_player_show_hover_stall_timer"]
[connection signal="timeout" from="ComboDisplayTimer" to="." method="_on_combo_display_timer_timeout"]
